Fix (style.css) Delete dark blue frame in service section on small devices fixing contrast issues with text

--- a/assets/style.css
+++ b/assets/style.css
@@ -290,6 +290,10 @@ input[type="submit"] {
 	.quote__text {
 		font-size: calc(1.375rem + 1.5vw);
 	}
+
+	#services .container::before {
+		display: none;
+	}
 }
 
 @media all and (max-width: 1000px) {
